feat: support for multiple client_ids via automation config
